bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:2: error: not found: value negatif
  if (((a<0 || b<0) && !negatif) || ((a<0 && b<0) && negatif)){
                        ^PosNeg:2: error: not found: value negatif
  if (((a<0 || b<0) && !negatif) || ((a<0 && b<0) && negatif)){
                                                     ^